# AI_Research_Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  chunks_output.txt  docker-compose.yml  pyproject.toml
docs/adr/: 001-dependency-management.md  002-chunking-strategy.md  003-embedding-model.md
src/research_navigator/: __init__.py  __main__.py  log_config.py  models.py  settings.py
src/research_navigator/generate/: generator.py  pipeline.py
src/research_navigator/ingest/: __main__.py  chunker.py  embedder.py  manifest.py  parsers.py  qdrant_store.py  sparse.py
src/research_navigator/retrieve/: filter_inference.py  hybrid.py
tests/: test_m2.py
tests/ingest/: test_parsers.py
tests/unit/: test_chunker.py  test_manifest.py  test_sparse.py
