[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-navigator"
version = "0.1.0"
description = "AI Research Navigator — citation-grounded RAG chatbot"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.9.0",
    "anthropic>=0.28.0",
    "sentence-transformers>=3.0.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "pymupdf>=1.24.0",
    "mistune>=3.0.0",
    "trafilatura>=1.9.0",
    "rank-bm25>=0.2.2",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.32.0",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/research_navigator"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/"]

[[tool.mypy.overrides]]
module = [
    "trafilatura.*",
    "rank_bm25.*",
    "sentence_transformers.*",
    "pymupdf.*",
    "mistune.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/research_navigator --cov-report=term-missing --cov-fail-under=70"
